@@ -182,6 +182,7 @@ proc_with_prefix test-print {{prefix ""}} {
 	"-pretty"
 	"-raw-values"
 	"-repeats"
+	"-shadowed"
 	"-static-members"
 	"-symbol"
 	"-union"
